# inscriber9000

./: Cargo.toml  README.md  inscribed.sqlite
migrations/: 0001_initial.sql
src/: main.rs
src/metadata/: kusama_gen.rs  mod.rs
