[package]
name = "inscriber9000"
version = "0.1.0"
edition = "2021"
exclude = ["README.md"]
repository = "https://github.com/pepyakin/inscriber9000"
license = "Unlicense"
description = "For all your inscribing needs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive", "cargo"] }
hex = "0.4.3"
subxt = { version = "0.33.0", features = ["jsonrpsee"] }
subxt-signer = "0.33.0"
tokio = { version = "1.35.0", features = ["macros", "rt", "rt-multi-thread"] }

[profile.dev]
debug = 0
